fixes linting errors and user error

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
     <% contacts.forEach(function(contact){ %>
       <div class="contact-list-member">
         <a class="contact-link" href="/contacts/<%= contact.id %>">
-          <%= contact.first_name %>&nbsp;<%= contact.last_name %>
+          <%= contact.first_name %>&nbsp<%= contact.last_name %>
         </a>
         <a class="delete-contact" href="/contacts/<%= contact.id %>/delete" tabindex="-1">X</a>
       </div>
