--- a/src/views/show.ejs
+++ b/src/views/show.ejs
@@ -4,6 +4,6 @@
     <a class="delete-contact" href="/contacts/<%= contact.id %>/delete">delete</a>
   </div>
 
-  <h1><%= contact.first_name %>&nbsp;<%= contact.last_name %></h1>
+  <h1><%= contact.first_name %>&nbsp<%= contact.last_name %></h1>
 
 <%- include footer.ejs %>
